# Packet-Sniffing-and-Spoofing

./: CMakeLists.txt  FindPCAP.cmake  SniffAndThenSpoof.c  SniffingAndThenSpoofing.py  header.py  packet_heder.h  pcap_sniffer.c  pcap_sniffer_filter.c  pcap_sniffer_telnet_password.c  sniffer.py  spoof.c  spoof_icmp.c  spoof_ip.c  spoofing.py  ttl.py
